Added english translations for settings menu

--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -9,3 +9,16 @@ MAIN_NEW_SCREEN_OBJECT_LABEL,Create a new screen object
 MAIN_SHOW_MENU_LABEL,Press any key to open this menu again
 MAIN_SYSTEM_SETTINGS_LABEL,System Settings
 MAIN_HIDE_MENU_BUTTON,Hide Menu
+SETTINGS_BACK_BUTTON,Back
+SETTINGS_FULLSCREEN_BUTTON,Fullscreen
+SETTINGS_SAVE_BUTTON,Save Data
+SETTINGS_LOAD_BUTTON,Load Data
+SETTINGS_TRANSPARENT_BACKGROUND_LABEL,Transparent BG
+SETTINGS_BACKGROUND_COLOR_LABEL,BG Color
+SETTINGS_WINDOW_SIZE_LABEL,Fixed Window Size
+SETTINGS_WINDOW_SIZE_WIDTH_LABEL,Width
+SETTINGS_WINDOW_SIZE_HEIGHT_LABEL,Height
+SETTINGS_CURRENT_FPS_LABEL,Current FPS:
+SETTINGS_FPS_CAP_LABEL,FPS Cap
+SETTINGS_VERSION_LABEL,Version:
+SETTINGS_QUIT_BUTTON,Quit
