Add English translations for Screen Object Menu

--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -22,3 +22,13 @@ SETTINGS_CURRENT_FPS_LABEL,Current FPS:
 SETTINGS_FPS_CAP_LABEL,FPS Cap
 SETTINGS_VERSION_LABEL,Version:
 SETTINGS_QUIT_BUTTON,Quit
+SO_MENU_MOVE_UP_TOOLTIP,Move up in list
+SO_MENU_MOVE_DOWN_TOOLTIP,Move down in list
+SO_MENU_NAME_PLACEHOLDER,Name
+SO_MENU_SETTINGS_TOOLTIP,Settings
+SO_MENU_VISIBILITY_TOOLTIP,Show/hide object
+SO_MENU_AUTO_TOGGLE_TOOLTIP,Toggle the object's visibility when the timer runs out
+SO_MENU_DUPLICATE_TOOLTIP,Duplicate
+SO_MENU_GIZMO_TOOLTIP,"Move, scale, rotate"
+SO_MENU_RECENTER_TOOLTIP,Recenter
+SO_MENU_DELETE_TOOLTIP,Delete
