--- a/Translations/Translations.csv
+++ b/Translations/Translations.csv
@@ -32,3 +32,37 @@ SO_MENU_DUPLICATE_TOOLTIP,Duplicate
 SO_MENU_GIZMO_TOOLTIP,"Move, scale, rotate"
 SO_MENU_RECENTER_TOOLTIP,Recenter
 SO_MENU_DELETE_TOOLTIP,Delete
+SO_SETTINGS_IMAGE_TAB,Image
+SO_SETTINGS_COLOR_TAB,Color
+SO_SETTINGS_ANIMATION_TAB,Animation
+SO_SETTINGS_MISC_TAB,Misc
+SO_SETTINGS_MULTI_IMAGE_LABEL,Combined Avatar Image
+SO_SETTINGS_MULTI_IMAGE_TOOLTIP,Sprite sheet in a single image
+SO_SETTINGS_AVATAR_IMAGE_LABEL,Avatar
+SO_SETTINGS_AVATAR_IMAGE_TOOLTIP,Sprite sheet has talking texture
+SO_SETTINGS_CHANGE_IMAGE_BUTTON,Change Image
+SO_SETTINGS_NEUTRAL_IMAGE_LABEL,Neutral Image
+SO_SETTINGS_NEUTRAL_IMAGE_TOOLTIP,Sprite sheet has talking texture
+SO_SETTINGS_BLINKING_IMAGE_LABEL,Blinking Image
+SO_SETTINGS_BLINKING_IMAGE_TOOLTIP,Sprite sheet has blinking texture
+SO_SETTINGS_TALKING_IMAGE_LABEL,Talking Image
+SO_SETTINGS_TALKING_IMAGE_TOOLTIP,Sprite sheet has talking texture
+SO_SETTINGS_TALKING_BLINKING_IMAGE_LABEL,Talking + Blinking Image
+SO_SETTINGS_TALKING_BLINKING_IMAGE_TOOLTIP,Sprite sheet has talking+blinking texture
+SO_SETTINGS_TALKING_TOGGLE_LABEL,Has Talking Texture
+SO_SETTINGS_TALKING_TOGGLE_TOOLTIP,Sprite sheet has talking texture
+SO_SETTINGS_BLINKING_TOGGLE_LABEL,Has Blinking Texture
+SO_SETTINGS_BLINKING_TOGGLE_TOOLTIP,Sprite sheet has blinking texture
+SO_SETTINGS_FILTER_TOGGLE_LABEL,Linear Filter
+SO_SETTINGS_FILTER_TOGGLE_TOOLTIP,Reduces hard edges
+SO_SETTINGS_HUE_SLIDER_LABEL,Hue
+SO_SETTINGS_SATURATION_SLIDER_LABEL,Saturation
+SO_SETTINGS_VALUE_SLIDER_LABEL,Value
+SO_SETTINGS_ANIMATION_TOGGLE_LABEL,Animate Object
+SO_SETTINGS_ANIMATION_TOGGLE_TOOLTIP,Bounces on voice activity
+SO_SETTINGS_ANIMATION_HEIGHT_LABEL,Height
+SO_SETTINGS_ANIMATION_SPEED_LABEL,Speed
+SO_SETTINGS_TIMER_TOGGLE_LABEL,Toggle Timer
+SO_SETTINGS_TIMER_TOGGLE_TOOLTIP,Enables the Auto Toggler
+SO_SETTINGS_TIMER_DURATION_LABEL,Time (Seconds)
+SO_SETTINGS_TIMER_DURATION_TOOLTIP,Timer duration in seconds
