--- a/Translations/English.csv
+++ b/Translations/English.csv
@@ -62,7 +62,13 @@ SO_SETTINGS_ANIMATION_TOGGLE_LABEL,Animate Object
 SO_SETTINGS_ANIMATION_TOGGLE_TOOLTIP,Bounces on voice activity
 SO_SETTINGS_ANIMATION_HEIGHT_LABEL,Height
 SO_SETTINGS_ANIMATION_SPEED_LABEL,Speed
+SO_SETTINGS_ANIMATION_BLINK_SPEED_LABEL,Blink Speed Controls
+SO_SETTINGS_ANIMATION_BLINK_DURATION_TOOLTIP,Blink Duration (deciseconds)
+SO_SETTINGS_ANIMATION_MAX_INTERVAL_TOOLTIP,Maximum Blink Interval (seconds)
+SO_SETTINGS_ANIMATION_MIN_INTERVAL_TOOLTIP,Minimum Blink Interval (seconds) 
 SO_SETTINGS_TIMER_TOGGLE_LABEL,Toggle Timer
 SO_SETTINGS_TIMER_TOGGLE_TOOLTIP,Enables the Auto Toggler
 SO_SETTINGS_TIMER_DURATION_LABEL,Time (Seconds)
 SO_SETTINGS_TIMER_DURATION_TOOLTIP,Timer duration in seconds
+
+
