fixed for feed back

--- a/Translations/English.csv
+++ b/Translations/English.csv
@@ -66,6 +66,9 @@ SO_SETTINGS_ANIMATION_BLINK_SPEED_LABEL,Blink Speed Controls
 SO_SETTINGS_ANIMATION_BLINK_DURATION_TOOLTIP,Blink Duration (deciseconds)
 SO_SETTINGS_ANIMATION_MAX_INTERVAL_TOOLTIP,Maximum Blink Interval (seconds)
 SO_SETTINGS_ANIMATION_MIN_INTERVAL_TOOLTIP,Minimum Blink Interval (seconds) 
+SO_SETTINGS_ANIMATION_BLINK_MIN_INTERVAL_LABEL,Minimum Blink\nInterval (seconds)
+SO_SETTINGS_ANIMATION_BLINK_MAX_INTERVAL_LABEL,Maximum Blink\nInterval (seconds)
+SO_SETTINGS_ANIMATION_BLINK_DURATION_LABEL,Blink Duration\n(deciseconds)
 SO_SETTINGS_TIMER_TOGGLE_LABEL,Toggle Timer
 SO_SETTINGS_TIMER_TOGGLE_TOOLTIP,Enables the Auto Toggler
 SO_SETTINGS_TIMER_DURATION_LABEL,Time (Seconds)
