Fixed some text that wasn't translating properly

--- a/Translations/English.csv
+++ b/Translations/English.csv
@@ -16,10 +16,13 @@ SETTINGS_LOAD_BUTTON,Load Data
 SETTINGS_TRANSPARENT_BACKGROUND_LABEL,Transparent BG
 SETTINGS_BACKGROUND_COLOR_LABEL,BG Color
 SETTINGS_WINDOW_SIZE_LABEL,Fixed Window Size
+SETTINGS_WINDOW_SIZE_TOOLTIP,Locks window size to prevent unwanted resizing
 SETTINGS_WINDOW_SIZE_WIDTH_LABEL,Width
 SETTINGS_WINDOW_SIZE_HEIGHT_LABEL,Height
 SETTINGS_CURRENT_FPS_LABEL,Current FPS:
 SETTINGS_FPS_CAP_LABEL,FPS Cap
+SETTINGS_MAX_FPS_LABEL,FPS: 
+SETTINGS_LANGUAGE_LABEL,Language
 SETTINGS_VERSION_LABEL,Version:
 SETTINGS_QUIT_BUTTON,Quit
 SO_MENU_MOVE_UP_TOOLTIP,Move up in list
