Add Default language option to language dropdown

--- a/Translations/English.csv
+++ b/Translations/English.csv
@@ -23,6 +23,7 @@ SETTINGS_CURRENT_FPS_LABEL,Current FPS:
 SETTINGS_FPS_CAP_LABEL,FPS Cap
 SETTINGS_MAX_FPS_LABEL,FPS: 
 SETTINGS_LANGUAGE_LABEL,Language
+SETTINGS_LANGUAGE_DEFAULT_LABEL,Default
 SETTINGS_VERSION_LABEL,Version:
 SETTINGS_QUIT_BUTTON,Quit
 SO_MENU_MOVE_UP_TOOLTIP,Move up in list
