Signle bounce save and load and localization

--- a/Translations/English.csv
+++ b/Translations/English.csv
@@ -64,6 +64,8 @@ SO_SETTINGS_SATURATION_SLIDER_LABEL,Saturation
 SO_SETTINGS_VALUE_SLIDER_LABEL,Value
 SO_SETTINGS_ANIMATION_TOGGLE_LABEL,Animate Object
 SO_SETTINGS_ANIMATION_TOGGLE_TOOLTIP,Bounces on voice activity
+SO_SETTINGS_ANIMATION_SINGLE_BOUNCE_LABEL, Single Bounce
+SO_SETTINGS_ANIMATION_SINGLE_BOUNCE_LABEL_TOOLTIP, Bounces once on voice activity 
 SO_SETTINGS_ANIMATION_HEIGHT_LABEL,Height
 SO_SETTINGS_ANIMATION_SPEED_LABEL,Speed
 SO_SETTINGS_ANIMATION_BLINK_SPEED_LABEL,Blink Speed Controls
